--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=Balaji
-spring.datasource.password=Balaji@123
+spring.datasource.username=Banji
+spring.datasource.password=Banji@123
